--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/32fb4b5e52.js" crossorigin="anonymous"></script>
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+<header class="header">
+    <nav>
+        <i class="fa-solid fa-bars"></i>
+        <div class="container">
+            <div class="brand">
+                <a href="">Influencer products</a>
+            </div>
+            <div class="manu">
+                <div>
+                    <a href="">Home</a>
+                    <a href="">Products</a>
+                    <a href="">Sign up</a>
+                    <a href="">Log in</a>
+                    <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+                </div>
+                <a href=""><i class="fa-solid fa-cart-shopping" id="no-fill"></i></a>
+            </div>
+        </div>
+    </nav>
+</header>
 
 <body>
 
